zeit.content.text changes
=========================

2.3.1 (unreleased)
------------------

- Nothing changed yet.


2.3.0 (2019-01-28)
------------------

- ZON-5112: Add own content type for embeds


2.2.1 (2018-01-09)
------------------

- TMS-134: Update content base class after zeit.cms API change


2.2.0 (2017-08-07)
------------------

- ZON-4007: Add jinja template content type.


2.1.0 (2016-10-19)
------------------

- ZON-3377: Add python script content type (without any UI so far).


2.0.4 (2016-03-22)
------------------

- Configure default view properly.


2.0.3 (2016-03-10)
------------------

- Improve wording (ZON-2826).


2.0.2 (2016-03-03)
------------------

- Add text source for references


2.0.1 (2014-10-21)
------------------

- Update dependency to ZODB-4.0.


2.0.0 (2014-03-10)
------------------

- Extracted from zeit.cms egg.