@@ -81,6 +81,15 @@
     permission="zeit.EditContent"
     menu="zeit-context-views" title="Edit"
     />
-  
+
+  <browser:page
+    for="zeit.content.text.interfaces.IEmbed"
+    layer="zeit.cms.browser.interfaces.ICMSLayer"
+    name="view.html"
+    class=".embed.Display"
+    permission="zope.View"
+    menu="zeit-context-views" title="View"
+    />
+
 </configure>
 
